[package]
name = "yew-clay-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-clay = { path = "../yew-clay/yew_clay", features = ["button"]}
web-sys = "0.3.59"
yew-dom-attributes = { path = "../yew-dom-attributes" }
wasm-bindgen = "0.2.82"
gloo-console = "0.2.1"
domatt = { path = "../domatt" }

[dependencies.material-yew]
version = "0.2.0"
features = [
    "button",
    "icon"
]
